force-app/main/default/objects/DonorGiftSummary/fields/Average_365_Day_Amount__c.field-meta.xml
<CustomField>
    <fullName>Average_365_Day_Amount__c</fullName>
    <formula>sj_Last365DaysAmount__c / sj_Last365DaysGiftCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average 365 Day Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>