force-app/main/default/objects/DonorGiftSummary/fields/Average_FY_Amount__c.field-meta.xml
<CustomField>
    <fullName>Average_FY_Amount__c</fullName>
    <formula>sj_CurrentFiscalYearAmount__c / sj_CurrentFiscalYearGiftCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average FY Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>