force-app/main/default/objects/DonorGiftSummary/fields/sj_CurrentFiscalYearAmount__c.field-meta.xml
<CustomField>
    <fullName>sj_CurrentFiscalYearAmount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Current FY Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>