force-app/main/default/objects/DonorGiftSummary/fields/sj_CurrentFiscalYearGiftCount__c.field-meta.xml
<CustomField>
    <fullName>sj_CurrentFiscalYearGiftCount__c</fullName>
    <label>Current Fiscal Year Gift Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>