force-app/main/default/objects/DonorGiftSummary/fields/sj_Last365DaysAmount__c.field-meta.xml
<CustomField>
    <fullName>sj_Last365DaysAmount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Last 365 Days Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>