force-app/main/default/objects/DonorGiftSummary/fields/sj_Last365DaysGiftCount__c.field-meta.xml
<CustomField>
    <fullName>sj_Last365DaysGiftCount__c</fullName>
    <label>Last 365 Days Gift Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>