force-app/main/default/objects/DonorGiftSummary/fields/sj_PreviousFiscalYearAmount__c.field-meta.xml
<CustomField>
    <fullName>sj_PreviousFiscalYearAmount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Previous Fiscal Year Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>