force-app/main/default/objects/DonorGiftSummary/fields/sj_PreviousFiscalYearGiftCount__c.field-meta.xml
<CustomField>
    <fullName>sj_PreviousFiscalYearGiftCount__c</fullName>
    <label>Previous Fiscal Year Gift Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>