force-app/main/default/objects/DonorGiftSummary/fields/sj_TwoFiscalYearsAgoAmount__c.field-meta.xml
<CustomField>
    <fullName>sj_TwoFiscalYearsAgoAmount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Two Fiscal Years Ago Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>