force-app/main/default/objects/DonorGiftSummary/fields/sj_TwoFiscalYearsAgoGiftCount__c.field-meta.xml
<CustomField>
    <fullName>sj_TwoFiscalYearsAgoGiftCount__c</fullName>
    <label>Two Fiscal Years Ago Gift Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>